WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99379
[Mac] links cannot be hovered or clicked if positioned where a horizontal scrollbar will appear
https://bugs.webkit.org/show_bug.cgi?id=99379
Summary
[Mac] links cannot be hovered or clicked if positioned where a horizontal scr...
gruehle
Reported
2012-10-15 16:11:22 PDT
Created
attachment 168799
[details]
Sample file for bug If an <a> tag is positioned where a horizontal scrollbar will appear, the link cannot be hovered or clicked. Note: This only occurs on lion/mountain lion with scrollbars set to automatically hide. Steps to reproduce: 1. Load the attached example file or go to
http://jsfiddle.net/yYTJV/2/
2. Hovering or clicking on links 1-4 works fine 3. Hover over link #5 and try to click it Results: Hand cursor does not appear. Link is not clickable. Note that the text can be selected, but the link cannot be clicked.
Attachments
Sample file for bug
(858 bytes, text/html)
2012-10-15 16:11 PDT
,
gruehle
no flags
Details
Patch
(1.71 KB, patch)
2013-04-29 14:27 PDT
,
Dave Hyatt
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-10-16 10:50:57 PDT
I think that this is a known issue. Beth, Simon, do you know if there is previously filed bug about this?
Beth Dakin
Comment 2
2012-10-16 11:40:42 PDT
(In reply to
comment #1
)
> I think that this is a known issue. Beth, Simon, do you know if there is previously filed bug about this?
I believe that this Radar is the same issue: <
rdar://problem/10929565
> But I have not found a bugs.webkit.org equivalent.
Beth Dakin
Comment 3
2013-02-12 13:28:05 PST
***
Bug 109254
has been marked as a duplicate of this bug. ***
greg.goodrich
Comment 4
2013-04-09 12:35:27 PDT
I too am having an issue with this bug. Very similar to OP, where I have a button that gets overlapped by the space that the scrollbar would occupy if it were visible, and both the click and the hover are lost on about half of this button.
Dave Hyatt
Comment 5
2013-04-29 14:27:52 PDT
Created
attachment 200046
[details]
Patch
Dave Hyatt
Comment 6
2013-04-29 14:35:43 PDT
Fixed in
r149315
.
Lucas Forschler
Comment 7
2019-02-06 09:19:02 PST
Mass move bugs into the DOM component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug