[Mac] Links can't be hovered or clicked with overlay scrollbars hidden. https://bugs.webkit.org/show_bug.cgi?id=99379

This is also <rdar://problem/10929565> Overlay scrollbars prevent hit-testing on
content underneath them, even when hidden

Reviewed by Beth Dakin.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::verticalScrollbarWidth):
(WebCore::RenderLayer::horizontalScrollbarHeight):



Canonical link: https://commits.webkit.org/133802@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149315 268f45cc-cd09-0410-ab3c-d52691b4dbfc